2011-04-26 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 5.3

2011-04-23 Erwin Waterlander <waterlan@xs4all.nl>
	* Don't report an error when unlink() fails because a file
	  doesn't exist.

2011-04-13 Erwin Waterlander <waterlan@xs4all.nl>
	* Print system error when input file can't be openened.
	  For instance "Permission denied"
	* Update manuals.
	* Update translations.

2011-04-04 Erwin Waterlander <waterlan@xs4all.nl>
	* Always print and return an error when wrong command-line
	  options are used. Also in quiet mode.
	* New option '--': Treat all following options as file names.

2011-04-03 Erwin Waterlander <waterlan@xs4all.nl>
	* Improved error reporting. Return system error when an error occurs.
	* Don't quit after first error (like rm, ls, grep, tar).
	* In quiet mode the return value is always zero.

2011-03-27 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c/unix2dos.c: Check if symbolic links point to
	  regular files.
	* dos2unix.c/unix2dos.c: Added short options -F, -R, -S.
	* po: update translations.

2011-03-24 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c/unix2dos.c: Changed options --follow, --no-follow,
	  to  --follow-symlink,  --replace-symlink,  --skip-symlink.
	* dos2unix.c/unix2dos.c: Options --force and --safe are only to
	  covert binary files or skip them.
	* dos2unix.c/unix2dos.c: Non-regular files that are not symbolic
	  links are never converted.

2011-03-23 Chris Wilson <cygwin@cwilson.fastmail.fm>
	* dos2unix.c/unix2dos.c: New options --follow and --no-follow.
	  In follow mode dos2unix writes to the symlink target, instead
	  of replacing the symbolic link with an output file.

2011-03-22 Chris Wilson <cygwin@cwilson.fastmail.fm>
	* querycp.c: Behave on Cygwin same as on Linux. Default
	  code page in ISO mode is CP437.

2011-03-21 Chris Wilson <cygwin@cwilson.fastmail.fm>
	* dos2unix.c/unix2dos.c:
	  - Cygwin may define WIN32 (via include files).
	  - bugfix: Cygwin: set mode to binary in stdio mode conversion.