@@ -1,3 +1,3 @@
-DOS2UNIX_VERSION = 5.3
-DOS2UNIX_VERSION_SHORT = 53
-DOS2UNIX_DATE = 2011-04-26
+DOS2UNIX_VERSION = 5.3.1-beta1
+DOS2UNIX_VERSION_SHORT = 53b1
+DOS2UNIX_DATE = 2011-05-04
